@startuml

title __DRUG's Class Diagram__\n

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.drug {
      class ChemicalDrug {
          + ChemicalDrug()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.drug {
      abstract class Drug {
          - id : long
          - name : String
          - halfLife : int
          - price : int
          + getPrice()
          + setPrice()
          + getId()
          + setId()
          + getName()
          + setName()
          + getHalfLife()
          + setHalfLife()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domain.drug {
      class NaturalDrug {
          + NaturalDrug()
      }
    }
  }
  

  ChemicalDrug -up-|> Drug
  NaturalDrug -up-|> Drug


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
